syntax = "proto3";

option csharp_namespace = "UserService.Proto";

package UserService;

import "UserService.Proto/User.proto";

message ChangeForgotPasswordCommand {
    string UserName = 1;
    string Token = 2;

    oneof UserPassword {
        string NewPassword = 3;
        PasswordActionFlag AutogenerateToEmail = 4;
    }
}

message ChangePasswordCommand {
    oneof UserPassword {
        string NewPassword = 1;
        PasswordActionFlag AutogenerateToEmail = 2;
    }
}
