syntax = "proto3";

option csharp_namespace = "UserService.Proto";

package UserService;

message ForgotPasswordRequest {
  string UserName = 1;
  string InputCaptcha = 2;
}
